--- a/COMPLIANCE.yaml
+++ b/COMPLIANCE.yaml
@@ -4,8 +4,8 @@ description: |
   compliance.
 spec:
   - name: PIA
-    status: PIA_STATUS_HERE
+    status: not-required
     last-updated: '2023-10-07T23:55:51.333Z'
   - name: STRA
-    status: STRA_STATUS_HERE
+    status: not-required
     last-updated: '2023-10-07T23:55:51.333Z'
