--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,12 +8,12 @@ website:
       - href: index.qmd
         text: About The Workshop
       - text: "Pre-Workshop Materials"  
-        menu:
-         - pre-workshop/software-install.qmd
-         - pre-workshop/assignment.qmd
+#        menu:
+#         - pre-workshop/software-install.qmd
+#         - pre-workshop/assignment.qmd
       - text: "Slides"
-        menu:
-        - text: "1. What is Version Control"
+#        menu:
+#        - text: "1. What is Version Control"
           href: slides/01-what-is-vc.qmd
           target: "_blank"
         - text: "2. Working Locally with Git"
