--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,9 +19,9 @@ website:
         - text: "2. Working Locally with Git"
           href: slides/02-working-local.qmd
           target: "_blank"
-        - text: "3. Remote Code Hosting and GitHub"
-          href: slides/03-remote-hosting.qmd
-          target: "_blank"
+#        - text: "3. Remote Code Hosting and GitHub"
+#          href: slides/03-remote-hosting.qmd
+#          target: "_blank"
         - text: "4. BCGOV GitHub Organization"
           href: slides/04-bcgov-org.qmd
           target: "_blank"
