--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         
-      - name: Setup dependencies
+      - name: Install packages
         run: |
           R -e 'install.packages("rmarkdown")' 
 
