--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+      
       - name: Install packages
         run: |
           R -e 'install.packages("rmarkdown")' 
