--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
       
-#      - name: Install packages
-#        run: |
-#          R -e 'install.packages("rmarkdown")' 
+      - name: Install packages
+        run: |
+          R -e 'install.packages("rmarkdown")' 
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
