--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,16 +13,16 @@ website:
          - pre-workshop/assignment.qmd
       - text: "Slides"
         menu:
-        - text: "1. What is Version Control"
+        - text: "What is Version Control"
           href: slides/01-what-is-vc.qmd
           target: "_blank"
-        - text: "2. Working Locally with Git"
+        - text: "Working Locally with Git"
           href: slides/02-working-local.qmd
           target: "_blank"
-#        - text: "3. Remote Code Hosting and GitHub"
+#        - text: "Remote Code Hosting and GitHub"
 #          href: slides/03-remote-hosting.qmd
 #          target: "_blank"
-        - text: "4. BCGOV GitHub Organization"
+        - text: "BCGOV GitHub Organization"
           href: slides/04-bcgov-org.qmd
           target: "_blank"
   sidebar:
@@ -43,6 +43,8 @@ format:
     theme: cosmo
     css: styles.css
     toc: true
+    number-sections: true
+    number-depth: 3
 
 editor: visual
 
