--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,27 +2,26 @@ project:
   type: website
 
 website:
-  title: "Introduction to Version Control"
+  title: "Introduction to Version Control with Git & GitHub"
   navbar:
     left:
       - href: index.qmd
-        text: About The Workshop
+        text: About
       - text: "Pre-Workshop Materials"  
         menu:
          - pre-workshop/software-install.qmd
          - pre-workshop/assignment.qmd
-      - text: "Slides"
-        menu:
-        - text: "May 23, 2024"
-          href: slides/2024-05-03-bcstats-vc-git-hub.pptx
-          target: "_blank"
+      - href: slides/2024-05-03-bcstats-vc-git-hub.pptx
+        text: "Slides"
+    right:     
+      - icon: github
+        href: https://github.com/bcgov/ds-intro-to-git
+        text: GitHub
   sidebar:
     style: "docked"
     search: false
     contents:
-      - section: "Getting Started"
-        contents:
-           - course-outline.qmd
+      - course-outline.qmd
       - section: "Course Sections"
         contents:
           - materials/01-what-is-vc.qmd
